--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,367 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="bicycles shop" />
+    <meta name="keywords" content="HTML5, CSS3, SCSS, JS, Parcel" />
+    <meta name="author" content="Nikolay Gagara" />
+    <title>Bicycles</title>
+  </head>
 
-    asdasdasd
-   <script src="./index.js"></script> 
-</body>
+  <body>
+    <div class="wrapper">
+      <main class="page">
+        <header class="header">
+          <div class="header__row">
+            <nav class="header__menu menu">
+              <div class="menu__burger burger">
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
+              <div class="menu__body">
+                <ul class="menu__list">
+                  <li><a href="#" class="menu__link">ABOUT US</a></li>
+                  <li><a href="#" class="menu__link">WORK</a></li>
+                  <li><a href="#" class="menu__link">SHOP</a></li>
+                  <li><a href="#" class="menu__link">CONTACT</a></li>
+                </ul>
+              </div>
+            </nav>
+            <img class="header__logo" src="./images/Logo.png" alt="LOGO" />
+          </div>
+        </header>
+        <div class="main-screen"></div>
+        <div class="content">
+          <section class="generation">
+            <div class="container">
+              <div class="generation__block block">
+                <img class="block__icon" src="./images/Icon.png" alt="icon" />
+                <h1 class="block__title">A NEW GRNERATION OF VINTAGE BIKE</h1>
+                <p class="block__text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Perferendis corporis soluta voluptas velit sint nulla impedit
+                  recusandae quaerat quam, dolorem cum repellat, neque labore
+                  odit tempora adipisci eveniet quis quos exercitationem eum.
+                  Sequi, accusantium velit, veniam quia ea, praesentium
+                  necessitatibus voluptates voluptatem distinctio minus ad!
+                  Dignissimos commodi quam similique neque?
+                </p>
+              </div>
+            </div>
+          </section>
+          <section class="brands">
+            <div class="brands__row">
+              <div class="brands__column brands__column_b">
+                <a href="#" class="brands__item brands__item_bcompany">
+                  <img src="./images/Logo2.png" alt="" class="brands__logo" />
+                </a>
+              </div>
+              <div class="brands__column">
+                <div class="brands__content block">
+                  <img
+                    class="block__icon"
+                    src="./images/Icon3.png"
+                    alt="icon"
+                  />
+                  <h2 class="block__title">VINTAGE OLIVA</h2>
+                  <p class="block__text block__text_j">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Perferendis corporis soluta voluptas velit sint nulla
+                    impedit recusandae quaerat quam, dolorem cum repellat, neque
+                    labore odit tempora adipisci eveniet quis quos
+                    exercitationem eum.
+                  </p>
+                </div>
+                <div class="brands__image brands__image_bcompany"></div>
+              </div>
+            </div>
+          </section>
+          <section class="brands brands_rev">
+            <div class="brands__row">
+              <div class="brands__column brands__column_b">
+                <a href="#" class="brands__item brands__item_vintage">
+                  <img src="./images/Logo4.png" alt="" class="brands__logo" />
+                </a>
+              </div>
+              <div class="brands__column">
+                <div class="brands__content block">
+                  <img
+                    class="block__icon"
+                    src="./images/Icon4.png"
+                    alt="icon"
+                  />
+                  <h2 class="block__title">LA BORIOSA</h2>
+                  <p class="block__text block__text_j">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Perferendis corporis soluta voluptas velit sint nulla
+                    impedit recusandae quaerat quam, dolorem cum repellat, neque
+                    labore odit tempora adipisci eveniet quis quos
+                    exercitationem eum.
+                  </p>
+                </div>
+                <div class="brands__image brands__image_vintage"></div>
+              </div>
+            </div>
+          </section>
+          <section class="brands brands_last">
+            <div class="brands__row">
+              <div class="brands__column">
+                <a href="#" class="brands__item brands__item_bicycles">
+                  <img src="./images/Logo5.png" alt="" class="brands__logo" />
+                </a>
+              </div>
+              <div class="brands__column">
+                <div class="brands__content block">
+                  <img
+                    class="block__icon"
+                    src="./images/Icon5.png"
+                    alt="icon"
+                  />
+                  <h2 class="block__title">RETRO BIKE M HULOT</h2>
+                  <p class="block__text block__text_j">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Perferendis corporis soluta voluptas velit sint nulla
+                    impedit.
+                  </p>
+                </div>
+                <div class="brands__image brands__image_bicycles"></div>
+              </div>
+              <div class="brands__column">
+                <div class="brands__image brands__image_bicycles-s"></div>
+              </div>
+            </div>
+          </section>
+          <section class="slider">
+            <div class="container slider__container swiper-container">
+              <div class="slider__body swiper-wrapper">
+                <div class="slider__item swiper-slide">
+                  <div class="block">
+                    <img
+                      class="block__icon"
+                      src="./images/Icontw.png"
+                      alt="icon"
+                    />
+                    <h3 class="block__title">
+                      AOD New York @aod<span class="block__title_span">
+                        / 35min</span
+                      >
+                    </h3>
+                    <p class="block__text">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Perferendis corporis soluta voluptas velit sint nulla
+                      impedit recusandae.
+                    </p>
+                  </div>
+                </div>
+                <div class="slider__item swiper-slide">
+                  <div class="block">
+                    <img
+                      class="block__icon"
+                      src="./images/Icontw.png"
+                      alt="icon"
+                    />
+                    <h3 class="block__title">
+                      AOD New York @aod<span class="block__title_span">
+                        / 35min</span
+                      >
+                    </h3>
+                    <p class="block__text">
+                      Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                      Tempora doloribus obcaecati delectus nobis beatae error
+                      cumque aliquid provident. Expedita.
+                    </p>
+                  </div>
+                </div>
+                <div class="slider__item swiper-slide">
+                  <div class="block">
+                    <img
+                      class="block__icon"
+                      src="./images/Icontw.png"
+                      alt="icon"
+                    />
+                    <h3 class="block__title">
+                      AOD New York @aod<span class="block__title_span">
+                        / 35min</span
+                      >
+                    </h3>
+                    <p class="block__text">
+                      Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                      Consequatur molestiae, similique a eos suscipit ut maxime
+                      neque fugiat! Eum.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-pagination slider__bullets"></div>
+            </div>
+          </section>
+          <section class="shop">
+            <div class="shop__body">
+              <a href="" class="shop__link shop__link_1">
+                <img
+                  class="shop__image"
+                  src="./images/Layer19.jpg"
+                  alt="shop item"
+                />
+                <div class="shop__shop-now">
+                  <img src="./images/Shape.png" alt="Icon" class="shop__icon" />
+                  <p class="shop__text">SHOP NOW</p>
+                </div>
+              </a>
+              <a href="" class="shop__link shop__link_2">
+                <img
+                  class="shop__image"
+                  src="./images/Layer21.jpg"
+                  alt="shop item"
+                />
+                <div class="shop__shop-now">
+                  <img src="./images/Shape.png" alt="Icon" class="shop__icon" />
+                  <p class="shop__text">SHOP NOW</p>
+                </div>
+              </a>
+              <a href="" class="shop__link shop__link_3">
+                <img
+                  class="shop__image"
+                  src="./images/Layer20.jpg"
+                  alt="shop item"
+                />
+                <div class="shop__shop-now">
+                  <img src="./images/Shape.png" alt="Icon" class="shop__icon" />
+                  <p class="shop__text">SHOP NOW</p>
+                </div>
+              </a>
+              <a href="" class="shop__link shop__link_4">
+                <img
+                  class="shop__image"
+                  src="./images/Layer22.jpg"
+                  alt="shop item"
+                />
+                <div class="shop__shop-now">
+                  <img src="./images/Shape.png" alt="Icon" class="shop__icon" />
+                  <p class="shop__text">SHOP NOW</p>
+                </div>
+              </a>
+              <a href="" class="shop__link shop__link_5">
+                <img
+                  class="shop__image"
+                  src="./images/Layer25.jpg"
+                  alt="shop item"
+                />
+                <div class="shop__shop-now">
+                  <img src="./images/Shape.png" alt="Icon" class="shop__icon" />
+                  <p class="shop__text">SHOP NOW</p>
+                </div>
+              </a>
+              <a href="" class="shop__link shop__link_6">
+                <img
+                  class="shop__image"
+                  src="./images/Layer23.jpg"
+                  alt="shop item"
+                />
+                <div class="shop__shop-now">
+                  <img src="./images/Shape.png" alt="Icon" class="shop__icon" />
+                  <p class="shop__text">SHOP NOW</p>
+                </div>
+              </a>
+              <a href="" class="shop__link shop__link_7">
+                <img
+                  class="shop__image"
+                  src="./images/Layer24.jpg"
+                  alt="shop item"
+                />
+                <div class="shop__shop-now">
+                  <img src="./images/Shape.png" alt="Icon" class="shop__icon" />
+                  <p class="shop__text">SHOP NOW</p>
+                </div>
+              </a>
+              <a href="" class="shop__link shop__link_8">
+                <img
+                  class="shop__image"
+                  src="./images/Layer26.png"
+                  alt="shop item"
+                />
+                <div class="shop__shop-now">
+                  <img src="./images/Shape.png" alt="Icon" class="shop__icon" />
+                  <p class="shop__text">SHOP NOW</p>
+                </div>
+              </a>
+            </div>
+            <div class="shop__footer">
+              <div class="container">
+                <a href="#" class="shop__btn">DISKOVER THE SHOP</a>
+              </div>
+            </div>
+          </section>
+          <section class="subscribe">
+            <div class="container">
+              <div class="subscribe__body">
+                <img
+                  src="./images/Logo.png"
+                  alt="logo"
+                  class="subscribe__logo"
+                />
+                <h3 class="subscribe__title">Stay on the saddle!</h3>
+                <form class="subscribe__form" action="#" method="POST">
+                  <input
+                    class="subscribe__input"
+                    type="text"
+                    name="email"
+                    pattern="((\w+[-.]\w+)*|(\w+))@((\w+)|(\w+[-]\w+)*)(\.\w{2,})+"
+                    placeholder="enter your email..."
+                    required
+                  />
+                  <span class="subscribe__error"
+                    >Entery e-mail format: name@domain.com</span
+                  >
+                  <button class="subscribe__button" type="submit">GO</button>
+                </form>
+              </div>
+            </div>
+          </section>
+        </div>
+        <footer class="footer">
+          <div class="container">
+            <div class="footer__row">
+              <div class="footer__column">
+                <div class="footer__address">
+                  <p>AOD New York</p>
+                  <p>2250 Lexinston Avenue</p>
+                  <p>New York, NY 10035 - info@domain.com</p>
+                </div>
+              </div>
+              <div class="footer__column">
+                <ul class="footer__social">
+                  <li>
+                    <a href="#" class="footer__link">
+                      <img src="./images/T.png" alt="icon twitter" class="footer__icon" />
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="footer__link">
+                      <img src="./images/F.png" alt="icon facebook" class="footer__icon" />
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="footer__link">
+                      <img src="./images/P.png" alt="icon pinterest" class="footer__icon" />
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <div class="footer__column">
+                  <a class="footer__dev">
+                    <p class="footer__text">Handcrafted by</p>
+                    <img src="./images/Y.png" alt="icon developer" class="footer__icon">
+                  </a>
+              </div>
+            </div>
+          </div>
+        </footer>
+      </main>
+    </div>
+
+    <script src="./index.js"></script>
+  </body>
 </html>
